spacing fix

--- a/exams/e1/styles/e1.css
+++ b/exams/e1/styles/e1.css
@@ -44,6 +44,7 @@ article img{
 article h1{
     color: blue;
     column-span: all;
+    margin-top: 1%;
 }
 article h2{
     color: blue;
@@ -74,6 +75,7 @@ article{
     column-count: 3;
     column-rule: 4px dotted blue;
     column-gap: 2em;
+    margin: auto 2%;
 }
 aside{
     width: 20%;
